# agent-promotion

./: .gitignore  Containerfile.demo  Containerfile.service  README.md  preflight.sh  pyproject.toml  run-local.sh  verify.sh
agnosticv/: description.adoc
app/: main.py
app/authority/: assembler.py  demotion.py  evaluator.py  gate.py  mode.py  ratification.py  recorder.py
app/domain/: config.py  models.py
app/ledger/: client.py
config/defaults/: authority.yaml
demo/: index.html  nginx.conf  package-lock.json  package.json  verify.sh
demo/src/: App.tsx  theme.css
demo/src/__tests__/: animations.test.ts  contracts.test.ts  seed.test.ts
demo/src/api/: client.ts  seed.ts
demo/src/components/: ActionQueue.tsx  ConfigPanel.tsx  DemotionEvent.tsx  DemotionReceipt.tsx  EvidenceChain.tsx  FlowDescription.tsx  GateDecision.tsx  Header.tsx  LabWizard.tsx  LedgerTrail.tsx  MetricCard.tsx  NarrativeCard.tsx  PromotionEvent.tsx  PromotionReceipt.tsx  RatificationCase.tsx  RatificationPanel.tsx  Roster.tsx  StepCard.tsx  TierPipeline.tsx  TrackRecord.tsx  TrackRecordTimeline.tsx  WorkflowDiagram.tsx
demo/src/lib/: animations.ts
demo/src/scenes/: Close.tsx  (+4 more)
deploy/: demo-oauth.yaml  deploy.sh  namespace.yaml  nginx-configmap.yaml  nginx-ocp.conf  service.yaml
docs/: MAPPING.md  READFIRST.md  antora.yml  story-arc.md  vertical-mappings.md
tests/: conftest.py  test_api.py  test_assembler.py  test_bdd_scenarios.py  test_contracts.py  test_demotion.py  test_edd_rubric.py  test_evaluator.py  test_gate.py  test_mode.py  test_ratification.py  test_recorder.py
(+9 files in other folders)
